--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,8 +3,6 @@ body {
     font-weight: normal;
 }
 
-
-
 .container {
     display: grid;
     grid-template-rows: auto 1fr auto;
@@ -26,4 +24,17 @@ body {
 .content {
     grid-area: main;
     margin-top: 50px;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    list-style: none;
+}
+
+h1 {
+    margin-bottom: 10px;
 }
