--- a/2025/pablo-haddadou/assets/css/style.css
+++ b/2025/pablo-haddadou/assets/css/style.css
@@ -57,6 +57,10 @@
     /* images et légendes */
     .container figure {
         margin: 20px 0 120px 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
     }
 
     .container figure figcaption {
@@ -263,6 +267,7 @@
 
     /* notes */
     .container .notes {
+        /* display: none; */
         margin: 60px 0 0 0;
         padding: 60px 0 0 0;
         width: 100%;
@@ -351,7 +356,7 @@
         grid-template-columns: 5rem 3fr;
     }
     .image-grid figure img{
-        width
+        width: 100%;
     }
 
 }
